@@ -744,5 +744,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.1.4"
+  "version": "3.2.1.5"
 }
